# ldr-humanoid-arm-system

./: .gitignore  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  STRUCTURE_EXPORT.txt
arm_system_ws/src/applications/arm_demos/: CMakeLists.txt
arm_system_ws/src/applications/bimanual_demos/: CMakeLists.txt  package.xml
arm_system_ws/src/applications/manipulation_library/: CMakeLists.txt  package.xml  setup.py
arm_system_ws/src/applications/manipulation_library/src/manipulation_library/: __init__.py
arm_system_ws/src/control/dual_arm_control/: package.xml
arm_system_ws/src/control/hand_control/: package.xml
arm_system_ws/src/hardware_interface/arm_hardware/: package.xml
arm_system_ws/src/hardware_interface/gripper_hardware/: CMakeLists.txt  package.xml
arm_system_ws/src/hardware_interface/hand_hardware/: CMakeLists.txt  package.xml
arm_system_ws/src/planning/arm_gripper_moveit_config/: package.xml
arm_system_ws/src/planning/arm_hand_moveit_config/: CMakeLists.txt  package.xml
arm_system_ws/src/planning/arm_moveit_config/: CMakeLists.txt  package.xml
arm_system_ws/src/planning/dual_arm_moveit_config/: package.xml
arm_system_ws/src/robot_description/hand_description/: CMakeLists.txt  package.xml
arm_system_ws/src/tools/arm_gui_tools/: package.xml  setup.py
arm_system_ws/src/tools/arm_gui_tools/src/arm_gui_tools/: __init__.py
arm_system_ws/src/tools/diagnostic_tools/: package.xml
src/applications/arm_demos/: package.xml
src/bringup/arm_system_bringup/: CMakeLists.txt  README.md  package.xml
src/bringup/arm_system_bringup/launch/: moveit_demo.launch.py  moveit_gazebo.launch.py
src/control/arm_control/: CMakeLists.txt  MOVEIT_INTEGRATION.md  QUICK_START.md  README.md  REFACTOR_SUMMARY.md  package.xml
src/control/arm_control/config/: arm_control_sim.yaml  controllers.yaml  joint_limits.yaml  ros2_control_sim.yaml
src/control/arm_control/launch/: control.launch.py  sim.launch.py
src/control/arm_control/scripts/: example.py  motion_planner.py  test_simple.py
src/control/dual_arm_control/: CMakeLists.txt
src/control/gripper_control/: CMakeLists.txt  package.xml
src/control/hand_control/: CMakeLists.txt
src/hardware_interface/arm_hardware/: CMakeLists.txt
src/planning/arm_gripper_moveit_config/: CMakeLists.txt
src/planning/arm_moveit_config/: .setup_assistant  package.xml
src/planning/arm_moveit_config/config/: arm_description.ros2_control.xacro  arm_description.srdf  arm_description.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/planning/arm_moveit_config/launch/: demo.launch.py
src/planning/dual_arm_moveit_config/: CMakeLists.txt
src/robot_description/arm_description/: CMakeLists.txt  README.md  package.xml
src/robot_description/arm_description/config/: view_robot.rviz
src/robot_description/arm_description/launch/: display_arm.launch.py  view_arm.launch.py  view_robot.launch.py
src/robot_description/arm_description/meshes/collision/: cot1.STL  cot2.STL  cot3.STL  pmotor3.STL  pmotor5.STL  suport.STL  umar2.STL
src/robot_description/arm_description/meshes/visual/: flansa .STL  incheietura.STL  pmotor1.STL  pmotor2.STL  pmotor4.STL  pmotor6.STL  umar1.STL
src/robot_description/arm_description/urdf/: arm.urdf.xacro  arm_base.xacro  arm_gazebo.xacro  arm_real.xacro  humanoid_arm_5dof.urdf
src/robot_description/arm_description/urdf/joints/: arm_joints.xacro
src/robot_description/arm_description/urdf/links/: arm_links.xacro
src/robot_description/arm_description/urdf/macros/: gazebo_extensions.xacro  materials.xacro  ros2_control.xacro
src/robot_description/dual_arm_description/: CMakeLists.txt  package.xml
src/robot_description/gripper_description/: CMakeLists.txt  package.xml
src/simulation/: Gz1.md
src/simulation/arm_gazebo/: CMakeLists.txt  package.xml
src/simulation/arm_gazebo/config/: controllers.yaml  gazebo_ros2_control.yaml
src/simulation/arm_gazebo/launch/: arm_world.launch.py  spawn_arm.launch.py
src/simulation/arm_gazebo/worlds/: lab.sdf  lab.world
src/tools/arm_gui_tools/: CMakeLists.txt
src/tools/diagnostic_tools/: CMakeLists.txt
